--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 24 15:05:04 2018</p>
+         Last Run: Wed Oct 24 16:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Oct 24, 2018 -  8:00PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -31,12 +31,12 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>10</td>
-                        <td>10</td>
+                        <td>9</td>
+                        <td>9</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>WNW</td>
                         <td>59</td>
                      </tr>
@@ -45,36 +45,36 @@
                         <td>Partly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>3</td>
-                        <td>63</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>62</td>
+                        <td>0</td>
+                        <td>13</td>
                         <td>WNW</td>
-                        <td>51</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>69</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>41</td>
+                        <td>WNW</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>70</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>29</td>
+                        <td>34</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,7 +119,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "10",
+                 "9",
                  "6",
                  "5",
                  "4"
@@ -131,7 +131,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "10",
+                 "9",
                  "8",
                  "7",
                  "6"
@@ -187,9 +187,9 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "3",
-                 "3",
-                 "3"
+                 "0",
+                 "2",
+                 "2"
                ]
              },
              {
@@ -197,8 +197,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "63",
+                 "55",
+                 "62",
                  "69",
                  "70"
                ]
@@ -209,9 +209,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "59",
-                 "51",
-                 "41",
-                 "29"
+                 "48",
+                 "40",
+                 "34"
                ]
              }
            ]
