--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 24 16:05:04 2018</p>
+         Last Run: Wed Oct 24 17:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Oct 24, 2018 -  8:00PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -30,34 +30,34 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>0</td>
+                        <td>24</td>
                         <td>55</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>WNW</td>
-                        <td>59</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
+                        <td>4</td>
+                        <td>63</td>
                         <td>0</td>
-                        <td>62</td>
-                        <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>WNW</td>
-                        <td>48</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>2</td>
+                        <td>0</td>
                         <td>69</td>
                         <td>0</td>
                         <td>11</td>
@@ -69,7 +69,7 @@
                         <td>Partly Cloudy</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>70</td>
                         <td>0</td>
                         <td>11</td>
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "24",
+                 "4",
                  "0",
-                 "0",
-                 "2",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -198,7 +198,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "55",
-                 "62",
+                 "63",
                  "69",
                  "70"
                ]
@@ -208,8 +208,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
-                 "48",
+                 "69",
+                 "55",
                  "40",
                  "34"
                ]
