--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 02:05:21 2018</p>
+         Last Run: Fri Oct 26 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -31,14 +31,14 @@
                      <tr>
                         <td>04:00 PM</td>
                         <td>Clear</td>
-                        <td>10</td>
-                        <td>10</td>
+                        <td>9</td>
+                        <td>9</td>
                         <td>0</td>
                         <td>29</td>
                         <td>1</td>
-                        <td>21</td>
-                        <td>WNW</td>
-                        <td>0</td>
+                        <td>23</td>
+                        <td>W</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>05:00 PM</td>
@@ -48,21 +48,21 @@
                         <td>0</td>
                         <td>30</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>19</td>
                         <td>WNW</td>
                         <td>0</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>8</td>
-                        <td>6</td>
+                        <td>7</td>
+                        <td>5</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>1</td>
+                        <td>0</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -70,23 +70,23 @@
                         <td>6</td>
                         <td>4</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>37</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>1</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>5</td>
-                        <td>2</td>
+                        <td>4</td>
+                        <td>1</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>2</td>
+                        <td>WNW</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -132,11 +132,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "10",
                  "9",
-                 "6",
+                 "9",
+                 "5",
                  "4",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -145,11 +145,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "10",
                  "9",
-                 "8",
+                 "9",
+                 "7",
                  "6",
-                 "5"
+                 "4"
                ]
              }
            ]
@@ -216,9 +216,9 @@
                "data":[
                  "29",
                  "30",
-                 "32",
-                 "35",
-                 "39"
+                 "33",
+                 "37",
+                 "41"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "1",
                  "0",
                  "0",
-                 "1",
-                 "1",
-                 "2"
+                 "2",
+                 "6"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 02:05:21 2018</p>
+         Last Run: Fri Oct 26 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -269,38 +269,38 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Overcast</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>-2</td>
-                        <td>17</td>
-                        <td>64</td>
+                        <td>9</td>
+                        <td>62</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>SSE</td>
-                        <td>88</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 AM</td>
-                        <td>Overcast</td>
-                        <td>3</td>
-                        <td>0</td>
-                        <td>12</td>
-                        <td>57</td>
-                        <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
                         <td>87</td>
                      </tr>
                      <tr>
-                        <td>12:00 PM</td>
-                        <td>Overcast</td>
-                        <td>4</td>
-                        <td>1</td>
-                        <td>18</td>
+                        <td>11:00 AM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>3</td>
+                        <td>0</td>
+                        <td>3</td>
                         <td>53</td>
+                        <td>1</td>
+                        <td>13</td>
+                        <td>SSE</td>
+                        <td>76</td>
+                     </tr>
+                     <tr>
+                        <td>12:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td>4</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
-                        <td>86</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -346,7 +346,7 @@
                "data":[
                  "-2",
                  "0",
-                 "1"
+                 "2"
                ]
              },
              {
@@ -355,9 +355,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "2",
                  "3",
-                 "4"
+                 "5"
                ]
              }
            ]
@@ -408,9 +408,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "17",
-                 "12",
-                 "18"
+                 "9",
+                 "3",
+                 "4"
                ]
              },
              {
@@ -418,9 +418,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
-                 "57",
-                 "53"
+                 "62",
+                 "53",
+                 "49"
                ]
              },
              {
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
                  "87",
-                 "86"
+                 "76",
+                 "70"
                ]
              }
            ]
