--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 05:05:03 2018</p>
+         Last Run: Fri Oct 26 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -37,8 +37,8 @@
                         <td>29</td>
                         <td>1</td>
                         <td>23</td>
-                        <td>W</td>
-                        <td>1</td>
+                        <td>WNW</td>
+                        <td>0</td>
                      </tr>
                      <tr>
                         <td>05:00 PM</td>
@@ -46,7 +46,7 @@
                         <td>9</td>
                         <td>9</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>0</td>
                         <td>19</td>
                         <td>W</td>
@@ -58,7 +58,7 @@
                         <td>7</td>
                         <td>4</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
@@ -70,11 +70,11 @@
                         <td>5</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>2</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>5</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -215,9 +215,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "29",
-                 "29",
-                 "33",
-                 "37",
+                 "30",
+                 "34",
+                 "38",
                  "42"
                ]
              },
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
                  "0",
                  "0",
-                 "2",
-                 "5"
+                 "0",
+                 "3",
+                 "6"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 05:05:03 2018</p>
+         Last Run: Fri Oct 26 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -271,7 +271,7 @@
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>10</td>
+                        <td>19</td>
                         <td>62</td>
                         <td>0</td>
                         <td>13</td>
@@ -282,13 +282,13 @@
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>3</td>
-                        <td>0</td>
+                        <td>-1</td>
                         <td>3</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SSE</td>
-                        <td>72</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -300,7 +300,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
-                        <td>70</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -345,7 +345,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "0",
+                 "-1",
                  "2"
                ]
              },
@@ -408,7 +408,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "10",
+                 "19",
                  "3",
                  "4"
                ]
@@ -419,7 +419,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "62",
-                 "55",
+                 "56",
                  "49"
                ]
              },
@@ -429,8 +429,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "87",
-                 "72",
-                 "70"
+                 "73",
+                 "66"
                ]
              }
            ]
