--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 07:05:03 2018</p>
+         Last Run: Fri Oct 26 08:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -31,12 +31,12 @@
                      <tr>
                         <td>04:00 PM</td>
                         <td>Clear</td>
-                        <td>9</td>
-                        <td>9</td>
+                        <td>10</td>
+                        <td>10</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>29</td>
                         <td>1</td>
-                        <td>23</td>
+                        <td>21</td>
                         <td>WNW</td>
                         <td>0</td>
                      </tr>
@@ -48,17 +48,17 @@
                         <td>0</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>19</td>
-                        <td>W</td>
+                        <td>18</td>
+                        <td>WNW</td>
                         <td>0</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>7</td>
-                        <td>4</td>
+                        <td>8</td>
+                        <td>6</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
@@ -67,24 +67,24 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>5</td>
-                        <td>2</td>
+                        <td>6</td>
+                        <td>3</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>35</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>W</td>
-                        <td>3</td>
+                        <td>WNW</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>4</td>
-                        <td>1</td>
+                        <td>5</td>
+                        <td>3</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>40</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WNW</td>
                         <td>5</td>
                      </tr>
@@ -132,11 +132,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "10",
                  "9",
-                 "9",
-                 "4",
-                 "2",
-                 "1"
+                 "6",
+                 "3",
+                 "3"
                ]
              },
              {
@@ -145,11 +145,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "10",
                  "9",
-                 "9",
-                 "7",
-                 "5",
-                 "4"
+                 "8",
+                 "6",
+                 "5"
                ]
              }
            ]
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "28",
                  "29",
-                 "33",
-                 "38",
-                 "42"
+                 "29",
+                 "32",
+                 "35",
+                 "40"
                ]
              },
              {
@@ -229,7 +229,7 @@
                  "0",
                  "0",
                  "0",
-                 "3",
+                 "2",
                  "5"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 07:05:03 2018</p>
+         Last Run: Fri Oct 26 08:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -276,27 +276,27 @@
                         <td>0</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>88</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>3</td>
                         <td>-1</td>
-                        <td>3</td>
+                        <td>8</td>
                         <td>55</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
-                        <td>73</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>5</td>
-                        <td>2</td>
-                        <td>3</td>
-                        <td>50</td>
+                        <td>4</td>
+                        <td>1</td>
+                        <td>6</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
@@ -346,7 +346,7 @@
                "data":[
                  "-2",
                  "-1",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -357,7 +357,7 @@
                "data":[
                  "2",
                  "3",
-                 "5"
+                 "4"
                ]
              }
            ]
@@ -409,8 +409,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "19",
-                 "3",
-                 "3"
+                 "8",
+                 "6"
                ]
              },
              {
@@ -420,7 +420,7 @@
                "data":[
                  "62",
                  "55",
-                 "50"
+                 "51"
                ]
              },
              {
@@ -428,8 +428,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
-                 "73",
+                 "89",
+                 "75",
                  "67"
                ]
              }
