--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 13:05:03 2018</p>
+         Last Run: Fri Oct 26 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>9</td>
                         <td>9</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>29</td>
                         <td>1</td>
                         <td>23</td>
                         <td>WNW</td>
-                        <td>1</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>05:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>9</td>
                         <td>9</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>30</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>W</td>
-                        <td>1</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>7</td>
                         <td>4</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
@@ -70,7 +70,7 @@
                         <td>5</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
@@ -82,10 +82,10 @@
                         <td>4</td>
                         <td>1</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>6</td>
                      </tr>
                   </tbody>
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "28",
-                 "28",
-                 "32",
-                 "37",
-                 "40"
+                 "29",
+                 "30",
+                 "33",
+                 "38",
+                 "43"
                ]
              },
              {
@@ -226,8 +226,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
-                 "1",
+                 "2",
+                 "2",
                  "1",
                  "2",
                  "6"
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 13:05:03 2018</p>
+         Last Run: Fri Oct 26 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -270,11 +270,11 @@
                         <td>10:00 AM</td>
                         <td>Overcast</td>
                         <td>1</td>
-                        <td>-3</td>
+                        <td>-2</td>
                         <td>6</td>
-                        <td>63</td>
+                        <td>65</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SSE</td>
                         <td>87</td>
                      </tr>
@@ -283,12 +283,12 @@
                         <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>9</td>
-                        <td>59</td>
+                        <td>4</td>
+                        <td>58</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SSE</td>
-                        <td>77</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -296,11 +296,11 @@
                         <td>4</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>57</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
-                        <td>64</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -344,7 +344,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "-2",
                  "1"
                ]
@@ -409,7 +409,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "9",
+                 "4",
                  "6"
                ]
              },
@@ -418,9 +418,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
-                 "59",
-                 "57"
+                 "65",
+                 "58",
+                 "55"
                ]
              },
              {
@@ -429,8 +429,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "87",
-                 "77",
-                 "64"
+                 "78",
+                 "65"
                ]
              }
            ]
